# worldbox-writer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  user_story.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  gitleaks.yml  model-eval.yml  perf-gate.yml  release.yml  reusable-backend-quality.yml  reusable-frontend-quality.yml
.trae/documents/: frontend_ux_transformation_plan.md
docs/: README.md
docs/architecture/: DESIGN.md  DUAL_LOOP_ENGINE_DESIGN.md  RELATIONSHIP_SCHEMA_V1.md  TELEMETRY_SCHEMA_V1.md
docs/ci/: model-eval.yml.template
docs/development/: AGILE_GUIDE.md  CI_SETUP.md  DEVELOPMENT.md  DEV_WORKFLOW.md  DUAL_LOOP_ROLLOUT.md  RELEASE_PROCESS.md  RUNBOOK.md  SECRETS_POLICY.md  TYPECHECK_BASELINE.md
docs/orchestrator/: README.md  baseline-mock-round6.json  round-1.md  round-2.md  round-3.md  round-5.md  round-6.md  state.json
docs/product/: BUG_LIST.md  CODE_CLEANUP_PLAN.md  FUTURE_ROADMAP.md  PRODUCT_GAP_ANALYSIS.md  PRODUCT_PLANNING.md  PRODUCT_PLANNING_V2.md  PRODUCT_REVIEW.md  PRODUCT_STRATEGY.md  PRODUCT_THINKING.md  (+5 more)
frontend/: .gitignore  AGENTS.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
plans/: refactor-maintainable-architecture.md  refactor-phased-maintainability.md
scripts/: e2e_judge.py  migrate_prompts_to_md.py
tests/: .env.test.example  conftest.py
(+320 files in other folders)
